Fix code-blocks to allow horizontal scroll

--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -59,5 +59,15 @@ ul.embiggened
 @import 'bootstrap-responsive'
 
 pre
+  overflow-x: auto
   border: none
   background-color: transparent
+
+pre code
+  word-wrap: normal
+  white-space: pre
+
+// Highlight.js
+
+.hljs
+  overflow: scroll
